--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   "dependencies": {
     "react": "15.2.1",
     "react-native": "0.30.0",
-    "react-redux": "^4.4.5"
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2"
+  },
+  "devDependencies": {
+    "redux-devtools": "^3.3.1"
   }
 }
