--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   },
   "dependencies": {
     "express": "^4.14.0",
-    "react": "15.2.1",
+    "react": "^15.2.1",
     "react-native": "0.30.0",
+    "react-native-router-flux": "^3.32.0",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2"
   },
