--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native-router-flux": "^3.32.0",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0",
     "sequelize": "^3.23.6"
   },
   "devDependencies": {
