fixed associations, and updated message routes on api

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
+    "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "pg": "^6.0.3",
     "react": "^15.2.1",
