--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   },
   "dependencies": {
     "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
+    "express-session": "^1.14.0",
+    "passport": "^0.3.2",
     "pg": "^6.0.3",
     "react": "^15.2.1",
     "react-native": "0.30.0",
