--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.14.0",
     "express-session": "^1.14.0",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
     "pg": "^6.0.3",
     "react": "^15.2.1",
     "react-native": "0.30.0",
