--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "pg": "^6.0.3",
     "react": "^15.2.1",
     "react-native": "0.30.0",
+    "react-native-fbsdk": "^0.3.0",
     "react-native-router-flux": "^3.32.0",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
