--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
+    "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
     "connect-session-sequelize": "^3.1.0",
     "cookie-parser": "^1.4.3",
