--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
+    "request": "^2.74.0",
     "sequelize": "^3.23.6"
   },
   "devDependencies": {
