added likes table for messages. hooks. also, time since message/comments posted now displayed using moments.js

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "express-session": "^1.14.0",
+    "moment": "^2.15.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-facebook-token": "^3.3.0",
