--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
     "request": "^2.74.0",
-    "sequelize": "^3.23.6"
+    "sequelize": "^3.23.6",
+    "swearjar": "^0.1.3"
   },
   "devDependencies": {
     "redux-devtools": "^3.3.1"
