--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.30.0",
     "react-native-background-geolocation": "^1.5.0",
     "react-native-fbsdk": "^0.3.0",
+    "react-native-keyboard-spacer": "^0.3.0",
     "react-native-router-flux": "^3.32.0",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
