--- a/ios/SpaceboomV1/Info.plist
+++ b/ios/SpaceboomV1/Info.plist
@@ -55,7 +55,17 @@
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-	
+	<key>NSAppTransportSecurity</key>
+ 	<dict>
+ 		<key>NSExceptionDomains</key>
+ 		<dict>
+ 			<key>localhost</key>
+ 			<dict>
+ 				<key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
+ 				<true/>
+ 			</dict>
+ 		</dict>
+ 	</dict>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>Spaceboom requires background location tracking.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
