fixed a bug. in some cases the JSON sent back from the google maps API didnt parse correctly

--- a/ios/SpaceboomV1/Info.plist
+++ b/ios/SpaceboomV1/Info.plist
@@ -56,7 +56,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Spaceboom requires background location tracking.</string>
+	<string>To discover messages, Spaceboom requires background location tracking.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
 	<key>NSMotionUsageDescription</key>
